# keygen-py

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRDPARTY.yml  keygen_sh.pyi  pyproject.toml
.deps-recipes/py-machineid/: recipe.yaml
.deps-recipes/winregistry/: recipe.yaml
.github/: dependabot.yaml
.github/workflows/: create-release.yaml  pr-checks.yml  publish.yml  py-machineid.yaml  release.yml  test.yml  winregistry.yaml
conda-recipe/: recipe.yaml
conda-recipes/: LICENSE  variants.yaml
examples/: offline_verification.py  online_validation.py
python/keygen_sh/: __init__.py  __init__.pyi  _errors.pyi  certificate.pyi  component.pyi  config.pyi  entitlement.pyi  errors.py  license.pyi  license_file.pyi  machine.pyi  machine_file.pyi
src/: certificate.rs  component.rs  config.rs  date.rs  entitlement.rs  errors.rs  json.rs  lib.rs  license.rs  license_file.rs  machine.rs  machine_file.rs  utils.rs
test/: config_fixture.py  test_certificate.py  test_component.py  test_config.py  test_entitlement.py  test_errors.py  test_license.py  test_license_file.py  test_machine.py  test_machine_file.py
