[package]
name = "keygen-py"
edition = "2021"

[dependencies]
keygen-rs = "0.3.0"
pyo3 = { version = "0.23.1", features = ["extension-module", "serde"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime"] }
chrono = "0.4.38"
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"

[lib]
name = "keygen_sh"
crate-type = ["cdylib"]

