[tool.poetry]
name = "keygen-py"
version = "0.0.1"
description = ""
authors = ["Terra Quantum AG"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
maturin = ">=1.0,<2.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
