[project]
name = "keygen-py"
version = "0.1.1"
license = "MIT"
description = "Unofficial Keygen SDK for Python. Integrate license activation and offline licensing. Wrapper around keygen-rs rust crate"
requires-python = ">=3.9"
authors = [
    { name = "Terra Quantum AG", email = "info@terraquantum.swiss" },
    { name = "Cedric Kring", email = "ck@terraquantum.swiss" },
    { name = "Steven Beckers", email = "sb@terraquantum.swiss" },
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
maturin = ">=1.0,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
